--- a/style.css
+++ b/style.css
@@ -217,6 +217,10 @@ header {
     margin: 96px auto;
 }
 
+.featured-items img {
+    display: block;
+}
+
 /* Стили для заголовка */
 .featured-title {
     font-size: 30px;
@@ -410,78 +414,27 @@ header {
 @media screen and (min-width: 320px) and (max-width: 767px) {
 
     .header-logo-search img {
-        margin-right: 41px;
-        margin-top: 18px;
-        margin-bottom: 20px;
+        margin-left: 16px;
+        margin-right: 0;
+    }
+
+    .reg, .cart {
+        display: none;
+    }
+
+    .header-icons .mb a {
+        margin-right: 16px;
     }
 
     .header-icons {
-        width: 160px;
-        height: 30px;
+        flex-direction: row-reverse;
+    }
+
+    .banner {
         display: flex;
-        justify-content: space-between;
         align-items: center;
-        margin-top: 26px;
-        margin-bottom: 20px;
+        justify-content: center;
     }
-
-    /* Скрываем кнопки регистрации и корзины */
-    /* .header-icons {
-        display: none;
-    } */
-
-    /* Меню будет отображаться на мобильных устройствах */
-    /* .menu {
-        display: block;
-        position: absolute;
-    } */
-
-    /* Стили для мобильного меню */
-    /* .menu__item {
-        margin-bottom: 20px;
-    }
-
-    .menu__title {
-        font-size: 20px;
-        font-weight: 700;
-    }
-
-    .mobile-menu__list {
-        list-style: none;
-        padding: 0;
-    }
-
-    .mobile-menu__link {
-        font-size: 16px;
-        font-weight: 400;
-        color: #222;
-        text-decoration: none;
-        margin-bottom: 10px;
-        display: block;
-    } */
-
-    /* Скрываем логотип в хедере */
-    /* .header-logo-search img {
-        display: none;
-    } */
-
-    .header-icons a[href="registration.html"],
-    .header-icons a[href="cart.html"] {
-        display: none;
-    }
-
-    /* Стили для кнопки меню */
-    /* #menu-button {
-        display: block;
-        margin-right: 20px;
-        margin-top: 18px;
-        margin-bottom: 20px;
-    } */
-
-    /* #menu-button img {
-        max-width: 24px;
-        max-height: 24px;
-    } */
 
     /* Стили для баннера на мобильных устройствах */
     .banner-image {
@@ -489,16 +442,13 @@ header {
     }
 
     .banner-brand {
-        grid-column: 1 / span 2;
-        justify-self: center;
-        margin-top: 20px;
         margin-left: 0;
-        border-left: none;
-        padding-left: 0;
+        margin-top: 148px;
+        margin-bottom: 148px;
     }
 
     .banner-brand .brand-text {
-        font-size: 32px;
+        font-size: 38px;
     }
 
     .banner-brand .luxurious-text,
@@ -506,73 +456,58 @@ header {
         font-size: 20px;
     }
 
-    /* Стили для карточек товаров на мобильных устройствах */
-    .product-card {
-        max-width: 100%;
-        max-height: none;
-        width: 100%;
-        margin-bottom: 20px;
+    .product-section {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        margin-left: 16px;
+        margin-right: 16px;
     }
 
-    .product-large {
-        grid-column: span 2;
+    .product-card {
         width: 100%;
-        height: auto;
+        max-height: 247px;
     }
 
     .product-image img {
-        transform: scale(1);
+        width: 100%;
+        height: 100%;
     }
 
-    .product-overlay {
-        background: rgba(33, 22, 22, 0.70);
-    }
-
-    .product-overlay p {
-        font-size: 16px;
-    }
-
-    .product-title a {
-        font-size: 20px;
-        font-weight: 700;
-        margin-top: 16px;
-        margin-bottom: 10px;
-    }
-
-    .product-description {
-        font-size: 16px;
-        margin-left: 0;
-    }
-
-    .product-price {
-        font-size: 20px;
+    .product-large {
+        width: 100%;
+        height: auto;
     }
 
     /* Стили для секции Featured Items на мобильных устройствах */
     .featured-items {
         width: 100%;
-        margin: 20px 0;
-        padding-left: 16px;
-        padding-right: 16px;
+        margin: 64px 0;
+        padding-left: 8px;
+        padding-right: 8px;
     }
 
     .featured-title {
-        font-size: 24px;
+        font-size: 30px;
     }
 
     .featured-subtitle {
         font-size: 14px;
-        margin-top: 6px;
-        margin-bottom: 20px;
+        margin-top: 3px;
+        margin-bottom: 65px;
+        text-align: center;
     }
 
     .card-container {
-        flex-direction: column;
         gap: 20px;
-        align-items: center;
+    }
+
+    .image-container img {
+        width: 100%;
+        height: 100%;
     }
 
     .browse-button {
-        margin-top: 20px;
+        margin-top: 40px;
     }
 }
