--- a/style.css
+++ b/style.css
@@ -481,7 +481,7 @@ header {
 
     /* Стили для секции Featured Items на мобильных устройствах */
     .featured-items {
-        width: 100%;
+        max-width: calc(100% - 16px);
         margin: 64px 0;
         padding-left: 8px;
         padding-right: 8px;
