--- a/style.css
+++ b/style.css
@@ -377,27 +377,22 @@ header {
 }
 
 .sea {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
     text-align: center;
+    max-height: 450px;
+    overflow: hidden;
+
 }
 
 .background-image {
-    background-image: url('img/back-fot.png');
+    background-image: url('img/back-fot.svg');
     background-repeat: no-repeat;
-    width: 100%;
+    width: 1600px;
     height: 100%;
     position: absolute;
-    top: 0;
-    left: -1px;
-    z-index: -1;
-}
-
-.overlay-svg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     z-index: -1;
 }
 
@@ -407,24 +402,87 @@ header {
     z-index: 1;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
+    color: #222224;
     flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 97px;
+    margin-bottom: 126px;
+    width: 1140px;
 }
 
-.text p {
-    margin: 0;
+.footer-image {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: normal;
 }
 
-.image img {
-    width: 96px;
-    height: 96px;
-    margin-top: 20px;
+.footer-image img {
+    display: block;
+    /* Чтобы изображение не имело ненужных отступов */
+    margin: 0 auto 30px;
+    /* Центрировать изображение и добавить отступ снизу */
 }
+
+.a_pul {
+    font-style: italic;
+    /* Применить курсив к части текста */
+}
+
+.footer-subscribe {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+}
+
+.for {
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.subscribe-form {
+    display: flex;
+    align-items: center;
+    width: 360px;
+    height: 49px;
+    margin-top: 32px;
+}
+
+.subscribe-form input[type="email"] {
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="256" height="49" viewBox="0 0 256 49" fill="none"><path d="M256 0H17.6287C7.89266 0 0 10.969 0 24.5C0 38.031 7.89266 49 17.6287 49H256V24.5V0Z" fill="%23E1E1E1"/></svg>');
+    background-repeat: no-repeat;
+    width: 70%;
+    height: 100%;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding-left: 22px;
+    background-color: #F4F4F4B2;
+}
+
+.subscribe-form button[type="submit"] {
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="49" viewBox="0 0 100 49" fill="none"><path d="M0 0H77.8846C83.75 0 89.3751 2.58127 93.5225 7.17591C97.67 11.7706 100 18.0022 100 24.5C100 30.9978 97.67 37.2294 93.5225 41.8241C89.3751 46.4187 83.75 49 77.8846 49H0V0Z" fill="%23F16D7F"/></svg>');
+    background-repeat: no-repeat;
+    color: #FFF;
+    width: 32%;
+    height: 100%;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
 
 .footer-section-bottom {
     flex: auto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
 /* Стили для .footer-section-bottom */
@@ -438,7 +496,7 @@ header {
     /* max-width: 1140px; */
     display: flex;
     justify-content: space-around;
-    padding: 30px;
+    padding: 23px;
     flex-wrap: nowrap;
     align-items: center;
     flex-direction: row;
